fix: flicker on page load

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -11,4 +11,9 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
+  opacity: 0;
+}
+
+body.appear {
+  opacity: 1;
 }
